# enpheeph

./: .flake8  .gitignore  .gitmessage  .noxfile.py  .pre-commit-config.yaml  ASSUMPTIONS.md  CITATION.cff  CLASSIFIERS  COPYRIGHT  DESIGN_CHOICES.md  LICENSE  LICENSE_notice.txt  README.md  THINGS_WE_HAVE.md  TODO.md  conda_env_GPU.yml  conda_env_pytorch_1_5_CPU.yml  conda_env_pytorch_1_5_GPU.yml  conda_pytorch_1_8_gpu.yml  main.py  ops  pyproject.toml  requirements.txt  setup.py  test.ipynb  version
.github/workflows/: ci-push-jobs.yml  ci-push-workflow.yml  ci-testing.yml  ci_main_branch_tests_push.yml  ci_test.yml  init-update.yml  init_update.yml  pre-commit-ci.yml  tests.yml  update-license-year.yml
config/: basic_trainer.json
config/dnn/: alexnet.yml  alexnet_imagenet_base.json  basic_trainer.json  custom_config.json  custom_config.yml  custom_trainer_config.yml  default_custom_config.yml  default_pl_config.yml  lenet5_mnist_test.json  resnet152_imagenet_base.json
config/lightningcli/: alexnet.yml  custom_trainer_config.yml  lenet5.yml
config/snn/: snn_cifar10.json  snn_cifar10_deep.json  snn_cifar10_shallow.json  snn_cifar10_test.json  snn_mnist.json  snn_mnist_conv.json  snn_mnist_recurrent.json  snn_ncars_conv.json  snn_ncars_conv_lif.json  snn_ncars_conv_lif_refrac.json  snn_ncars_conv_lif_trainable_params.json  snn_ncars_conv_lif_trainable_params_model.json  snn_nmnist_conv.json
configs/: README.md  defaults.libsonnet
configs/datasets/: carla.libsonnet
configs/experiments/: base_task.jsonnet  image_classifier_resnet18_null_cifar10_false_false.sh  image_classifier_vgg11_null_cifar10_false_false.json  image_classifier_vgg11_null_cifar10_true_false.json  semantic_segmenter_mobilenetv3_large_100_fpn_carla_false_false.json  semantic_segmenter_mobilenetv3_large_100_fpn_carla_true_false.json  semantic_segmenter_mobilenetv3_large_100_fpn_carla_true_false.sh
configs/models/: base_model.libsonnet  image_classifier.libsonnet  object_detector.libsonnet
enpheeph/: __about__.py
enpheeph/extra/: injectioncallback.py
enpheeph/faults/: faultabc.py  outputpytorchfault.py  pytorchfaultabc.py
enpheeph/fi/injection/: faultdescriptor.py  injectioncallback.py
enpheeph/fi/modeling/: hardwaremodel.py
enpheeph/handlers/: generalpurposeinjectionhandlerabc.py  injectionhandler.py  injectionhandlerabc.py  pytorchinjectionhandler.py
enpheeph/handlers/plugins/: libraryhandlerpluginabc.py  pytorchhandlerplugin.py
enpheeph/injections/: injectionabc.py  outputpytorchfault.py  outputpytorchmonitor.py  pytorchinjectionabc.py  pytorchmaskmixin.py  snnoutputnorsefault.py
enpheeph/injections/mixins/: pytorchforwardhookmixin.py  pytorchmaskmixin.py  pytorchmonitorpostprocessormixin.py
enpheeph/injections/plugins/: cupypytorchmaskplugin.py  cupytorchmaskplugin.py  daskstorageplugin.py  lowleveltorchmaskpluginabc.py  numpypytorchmaskplugin.py  numpytorchmaskplugin.py  picklestorageplugin.py  storagepluginabc.py
enpheeph/monitors/: monitorabc.py
enpheeph/utils/: bitindexinfo.py  classes.py  common.py  data_classes.py  enums.py  faultlocator.py  functions.py  injectionlocation.py  pytorchtensorwrapper.py  typings.py
enpheeph/utils/json/: jsonparser.py
enpheeph/utils/mixins/: dispatcher.py  modulegatherer.py
ml/models/snn/: snnwrapper.py
ml/pl/utils/: pltrainercli.py
notebooks/: colab.ipynb  ijcnn2023_alltogether_plotting.ipynb  ijcnn2023_motivational_plot.ipynb  importance_vs_random_sampling_plots.ipynb  plot.ipynb  pltoly_template_test.ipynb  test_importancesampling.ipynb
notebooks/dsn2023_doctoralforum/: pruning_distribution_vs_resilience.ipynb
notebooks/pruning_distribution_analysis/: data_analysis.ipynb  pruning_distribution_analysis.ipynb  pruning_distribution_analysis_v2.2023_04_15__15_28_UTC.py  pruning_distribution_analysis_v2.2023_04_18__11_46_UTC.py  pruning_distribution_analysis_v2.ipynb
papers/ijcnn2022/: README.md  flash_cli_dataset_fix_0.5.2.patch  requirements.txt  simulation_script.py
papers/ijcnn2022/configs/: base.libsonnet  defaults.libsonnet  utils.libsonnet
papers/ijcnn2022/experiments/: image_classifier_resnet18_null_cifar10_false_false.pt  injector_script.py  semantic_segmenter_mobilenetv3_large_100_fpn_carla_true_false.pt  snn_training.py
papers/iros2022/: README.md  flash_cli_dataset_fix_0.5.2.patch  requirements.txt
papers/iros2022/configs/: utils.libsonnet
plot/: plot.ipynb
pynndora/utils/: instance_or_classmethod.py
requirements/: dev.txt  dnn.txt  extra.txt  full.txt  snn.txt  test.txt
requirements/conda/: conda_py3810_pytorch181_GPU.yml  conda_py39_pytorch181_GPU.yml  conda_py39_pytorch181_GPU_linux.yml  conda_py39_pytorch181_GPU_linux_dev.yml
requirements/test/: base.txt  full.txt
scripts/: attribution_generator.py  bitwise_grad_test.py  commands.md  conda-environment.yml  fault_aware_training.py  fault_aware_training_importance_sampling.py  ijcnn2023_simulations.sh  injector_script.py  parallel_injector_script.py  requirements.txt  sweeper_parallel_injector_script.py  training_script.py
src/: common.py  dispatcherabc.py  main.py  test.py  utils.py
src/datasets/: cifar10.py  mnist.py
src/dnn/: datamodule.py  model.py  test.py  train.py  utils.py
src/enpheeph/: __about__.py  __init__.py
src/fi/: basefaultdescriptor.py  baseinjectioncallback.py  baseparticledescriptor.py  experiment.py  faultdescriptor.py  faultinjectionmanager.py  fiutils.py  generation.py  hardwarefault.py  hardwaremodel.py  injectioncallback.py  manager.py  modelinterface.py  moduleupdater.py  setup.py  summary.py  testfi.py  timeline.py  weightinjectioncallback.py
src/models/: lenet5.py  utils.py  vgg.py
src/utils/: common.py  functions.py
test_scripts/: test.pickle  test_basic_snn_injection.py
tests/: conftest.py  test.py  testfaultinjection.py  testfi.py  testhwfi.py  testjsonparser.py
tests/legacy_scripts/: test.py  testargumentparser.py  testdispatcher.py  testfaultinjection.py  testhwfi.py  testjsonparser.py  testsnnfaultinjection.py
tests/test_enpheeph/: __init__.py
utils/mixins/: dispatcher.py
(+570 files in other folders)
